--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Володимир Чех-Кандидат на посаду старости в 8-г клас</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
     </header>
     <main>
         <div class="wrapper">
-            <p class="pan"><img src="/img/photo_5188360274011345547_y.jpg"></p>
+            <p class="pan"><img src="img/vova.jpg"></p>
             <h1>Володимир Чех</h1>
             <p>Володимир Чех – відданий громадянин, народився в маленькому та затишному селі, де він від самого
                 дитинства набував цінних життєвих уроків. Він виріс серед простих, але добрих та працьовитих людей, що
