--- a/index.html
+++ b/index.html
@@ -13,23 +13,26 @@
     <header>
 
         <nav class="header-menu">
-            <li><a href="#">Домашня</a></li>
+            <li><a href="index.html">Домашня</a></li>
             <li><a href="#">Новини</a></li>
-            <li><a href="#">Програмa</a></li>
+            <li><a href="program.html">Програмa</a></li>
             <li><a href="#">Команда</a></li>
         </nav>
 
     </header>
     <main>
         <div class="wrapper">
+
             <p class="pan"><img src="img/vova.jpg"></p>
+            <p class="park">Я, Володимир Чех пропоную свою кандидатуру на старосту 8-г класу Хмельницької ЗОШ№24 ради з
+                одним єдиним прагненням, об’єднати жителів класу навколо однієї мети.</p>
             <h1>Володимир Чех</h1>
             <p>Володимир Чех – відданий громадянин, народився в маленькому та затишному селі, де він від самого
                 дитинства набував цінних життєвих уроків. Він виріс серед простих, але добрих та працьовитих людей, що
                 сформувало його віру в справедливість та прагнення допомагати іншим. Змалку Володимр виявив особливу
                 турботливість до тварин та навколишнього середовища, що вразило його довколишніх. Ця любов до природи та
                 турбота про вразливість інших стала невід'ємною частиною його характеру. Зростаючи, Володимр вчився та
-                старанно працював, набуваючи досвіду у різних галузях. Він завжди був готовий взяти на себе 
+                старанно працював, набуваючи досвіду у різних галузях. Він завжди був готовий взяти на себе
                 відповідальність
                 та допомогти оточуючим. Його прагнення допомагати і покращувати життя інших стало ключовим моментом у
                 його
@@ -48,6 +51,7 @@
 
     </main>
     <footer>
+        
 
 
     </footer>
